--- a/APW_project/src/main/resources/application.properties
+++ b/APW_project/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost:8889/apw_project
+spring.datasource.url=jdbc:h2:file:~/database.db
+spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=root
 spring.datasource.password=root
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
